/*
 * $Id: ChangeLog,v 1.5450 2007/04/17 00:19:34 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-04-16 22:57 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/simplex.c
    * Compiler warning

2007-04-16 21:15 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.pc
  * hrbdll.pc
    + added clpclass, tscalar and classesc.c into rsp script file.

2007-04-16 13:02 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/simplex.c
  * source/pp/ppcore.c
    * Compiler warnings

2007-04-16 12:25 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/rtl/browse.prg
    ! fixed to go bottom record as reported in comp.lang.xharbour news.

  * hrbdll.bc
    + added tscalar.prg

2007-04-15 23:42 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * source/compiler/ppcomp.c
  * source/pp/ppcore.c
    + Added support for #pragma push ... and #pragma pop ...
      /* This allows save, modify, and later restore of any compiler switch */

  * include/wintypes.ch
    + Added #pragma push -w0, #pragma pop -w around overloaded #define int and INT to supress overloaded warnings

2007-04-15 17:55 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/cstr.prg
    * Object representation of ValToPrg() to be compilable

2007-04-15 15:09 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * makefile.bc
    * fixed missing file clpclass.prg

2007-04-15 16:11 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
     * Added clpclass.prg and tscalar.prg

2007-04-15 15:58 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/tobject.prg
  * source/rtl/tscalar.prg
    * Corrected static HB_FUNC( ... ) to HB_FUNC_STATIC( ... )

2007-04-15 12:36 UTC-0700 Andres Reyes <andresreyes_mzt/at/yahoo.com.mx>
  * source/rtl/tclass.prg